<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@color/colorPrimary"
                  android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:src="@drawable/logo"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1.25"
            android:orientation="vertical">

            <TextView
                style="@style/TextHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/esqueci_minha_senha"
                android:textAlignment="center"/>

            <TextView
                style="@style/TextGlobal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/insira_seu_email_abaixo"
                android:textAlignment="center"/>

            <EditText
                style="@style/InputStyleGlobal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email"/>

            <Button
                android:id="@+id/campo_reset"
                style="@style/ButtonStyleGlobal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="30dp"
                android:onClick="enviarReset"
                android:text="@string/enviar"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
