<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.62">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/logo"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1.11"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_login"
                style="@style/InputStyleGlobal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:text="julianomontini@gmail.com"/>

            <EditText
                android:id="@+id/senha_login"
                style="@style/InputStyleGlobal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:text="1234"/>
            <CheckBox
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextGlobal"
                android:layout_marginTop="30dp"
                android:text="Lembrar usuário"/>

            <Button
                style="@style/ButtonStyleGlobal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:onClick="efetuarLogin"
                android:text="@string/login"/>


            <TextView
                style="@style/TextGlobal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:clickable="true"
                android:onClick="iniciarCadastro"
                android:text="@string/cadastrar"
                android:textAlignment="center"/>

            <TextView
                style="@style/TextGlobal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:onClick="iniciarReset"
                android:text="@string/esqueci_minha_senha"
                android:textAlignment="center"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EXEC SQL"
                android:onClick="execSQL"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>

